# Stores-REST-API

./: Dockerfile  app.py  pyproject.toml  schemas.py
migrations/versions/: 574a711ce416_.py
models/: item.py  tag.py  user.py
resources/: item.py  store.py  tag.py  user.py
