[tool.poetry]
name = "storeapi"
version = "0.1.0"
description = ""
authors = ["Oleksandr Chaban"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
black = "^23.9.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
