[tool.poetry]
name = "storeapi"
version = "0.1.0"
description = ""
authors = ["Oleksandr Chaban"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
black = "^23.9.1"
python-dotenv = "^1.0.0"
flask-smorest = "^0.42.1"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.21"
flask-jwt-extended = "^4.5.2"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
